# planarity

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: planarity.cpp
src/readwrite/: graph_io.cpp  graph_io.hpp
